<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mtalh.hijinnks.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_border_text_edit"
                android:gravity="center|left"
                android:hint="Username"
                android:paddingLeft="10dp"
                android:textColor="@color/hint_grey"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />

       <!--     <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">-->

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_border_text_edit"
                    android:gravity="center|left"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/hint_grey"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="15sp" />
          <!--  </android.support.design.widget.TextInputLayout>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/dark_grey" />
            </RelativeLayout>

            <Button
                android:id="@+id/login_Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_background_border"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/connectwith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/or_connect_with"
            android:textColor="@color/dark_grey" />

        <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="horizontal">
 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:id="@+id/facebook_button"
                android:src="@drawable/facebook_button" />
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:visibility="gone" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/login_button_twitter"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/twitter_button"
                android:src="@drawable/twitter_button" />
        </LinearLayout>
        <!-- </LinearLayout>-->
    </LinearLayout>


</FrameLayout>
