<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.mtalh.hijinnks.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_border_text_edit"
                    android:gravity="center|left"
                    android:hint="Username"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:textColor="@color/hint_grey"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:background="@drawable/background_border_text_edit"
                    android:gravity="center|left"
                    android:hint="Email"
                    android:paddingLeft="10dp"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColor="@color/hint_grey" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:background="@drawable/background_border_text_edit"
                    android:gravity="center|left"
                    android:hint="Phone"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:inputType="number"
                    android:textColor="@color/hint_grey"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_border_text_edit"
                    android:gravity="center|left"
                    android:hint="Password"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/hint_grey"
                    android:textCursorDrawable="@drawable/cursor_color" />
                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_border_text_edit"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:hint="Confirm Password"
                    android:paddingLeft="10dp"
                    android:textColor="@color/hint_grey"
                    android:textCursorDrawable="@drawable/cursor_color" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="10dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/dark_grey" />
                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_background_border"
                    android:text="@string/registration"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/agree_registration"
                    android:textColor="@color/hint_grey"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="0dp"
                    android:text="Terms of Service"
                    android:textColor="@color/login_button_blue"
                    android:textSize="15sp" />
            </RelativeLayout>
            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="horizontal">
     -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:paddingBottom="5dp"
                    android:paddingLeft="0dp"
                    android:src="@drawable/facebook_button" />

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="0dp"
                    android:src="@drawable/twitter_button" />
            </RelativeLayout>
            <!-- </LinearLayout>-->
        </LinearLayout>

    </ScrollView>

</FrameLayout>
